# specialty_coffee_consumer_index

./: .gitignore  Cargo.toml  README.md  SUMMARY.md
.github/workflows/: daily-coffee-index.yml
examples/: aprilcoffeeroasters.json  counterculturecoffee.json  georgehowellcoffee.json  greatergoodsroasting.json  heartroasters.json  intelligentsia.json  onyxcoffeelab.json  proudmarycoffee.json  seycoffee.json  sightseercoffee.json
src/: db.rs  lib.rs  main.rs  models.rs
