[package]
name = "specialty_coffee_consumer_index"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "merge_databases"
path = "src/bin/merge_databases.rs"

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
tokio = { version = "1.28", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "offline"] }
anyhow = "1.0"
glob = "0.3"
chrono = "0.4"
octocrab = "0.18"
zip = "0.6"

# [features]
# nightly = []
